updated org checkboxes to be more organized - running into word-wrap type issue?

--- a/superherosightings/src/main/resources/static/styles.css
+++ b/superherosightings/src/main/resources/static/styles.css
@@ -39,6 +39,19 @@ li {
     height: 10px;
 }
 
+.grid-checkbox {
+    float: left;
+    text-align: left;
+    padding: 0px;
+}
+
+.grid-checkbox li {
+    display: block;
+    float: left;
+    width: 50%;
+    height: 30px
+}
+
 .inlineLinkBlock {
     width: 5%;
 }
